--- a/style.css
+++ b/style.css
@@ -337,7 +337,7 @@
 }
 .contenedorFormVoluntariado h3 {
   text-align: center;
-  font-size: 40px;
+  font-size: 42px;
   font-family: "Roboto", sans-serif;
   margin-bottom: 20px;
   color: #ffbe5e;
@@ -357,6 +357,7 @@ form input {
   padding: 10px 5px;
   margin: 5px 0;
   border: 0;
+  font-size: 32px;
   border-bottom: 1px solid #f1aa57;
   outline: none;
   background: transparent;
@@ -369,14 +370,17 @@ form input {
   background-color: #121217;
 }
 form button {
-  width: 110px;
-  height: 35px;
+  overflow-y: hidden;
+  padding: 2px;
+  width: 180px;
+  height: 40px;
   margin: 0 10px;
+  font-size: 32px;
   background: linear-gradient(to right, #f1aa57, #f2901e);
   border-radius: 30px;
   border: 0;
   outline: none;
-  color: #20180c;
+  color: #121217;
   cursor: pointer;
 }
 #form2 {
@@ -391,6 +395,7 @@ form button {
   margin: 0 auto;
   display: flex;
   align-items: center;
+  border-radius: 30px;
   box-shadow: 0 -1px 5px -1px #000;
   position: relative;
 }
@@ -398,11 +403,13 @@ form button {
   width: 120px;
   text-align: center;
   position: relative;
+  font-size: 20px;
 }
 #progreso {
   position: absolute;
   height: 100%;
   width: 120px;
+  border-radius: 30px;
   background: linear-gradient(to right, #f1aa57, #f2901e);
   transition: 1s;
 }
