--- a/style.css
+++ b/style.css
@@ -13,6 +13,44 @@ header{
   height: 100vh;
 }
 
+.flechas {
+  position: absolute;
+  bottom: 5%;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  /* justify-content: center; */
+  flex-direction: column;
+
+  align-content: center;
+}
+.flecha{
+  margin: 0 auto;
+  position: relative;
+  z-index: 40;
+  font-size: 50px;
+  color: #fff;
+}
+
+.flecha:nth-child(1) {
+  animation: fadeInOut 3s infinite;
+}
+
+.flecha:nth-child(2) {
+  animation: fadeInOut 3s infinite;
+  animation-delay: 0.8s;
+}
+
+.flecha:nth-child(3) {
+  animation: fadeInOut 3s infinite;
+  animation-delay: 1.4s;
+}
+
+@keyframes fadeInOut {
+  0%, 100% { opacity: 1; }
+  50% { opacity: 0; }
+}
+
 .Imagen {
   width: 100%;
   height: 100vh;
@@ -1019,6 +1057,7 @@ footer img {
 #root h4 {
   font-size: 48px;
 }
+
 
 .loca {
   background-image: url("img/voluntarios.png");
