--- a/style.css
+++ b/style.css
@@ -369,6 +369,20 @@ form input {
   outline: none;
   background: transparent;
   color: #f2901e;
+  transition: background-color 0.5s ease;
+}
+.error-input{
+  background-color: darkred;
+  border-radius: 30px;
+  animation: shake 0.5s;
+  animation-timing-function: ease-in-out;
+}
+@keyframes shake{
+  0%{transform: translateX(0);}
+  25%{transform: translateX(-5px);}
+  50%{transform: translateX(5px);}
+  75%{transform: translateX(-5px);}
+  100%{transform: translateX(0px);}
 }
 .btnForm {
   width: 100%;
